reports/cppcheck.txt
Checking api-endpoints/api-endpoints-lib.h ...
1/4 files checked 7% done
Checking api-endpoints/api-endpoints.cc ...
2/4 files checked 80% done
Checking api-endpoints/api-matchmaking-lib.h ...
3/4 files checked 82% done
Checking api-endpoints/api-matchmaking.cc ...
4/4 files checked 100% done
Checking authentication/auth-service.cpp ...
1/2 files checked 48% done
Checking authentication/auth-service.h ...
2/2 files checked 100% done
Checking main/db-service.cpp ...
1/3 files checked 77% done
Checking main/db-service.h ...
2/3 files checked 92% done
Checking main/main.cpp ...
3/3 files checked 100% done
Checking testing/MockAPIEndPoints.h ...
1/14 files checked 0% done
Checking testing/MockAuthService.h ...
2/14 files checked 0% done
Checking testing/MockDBService.h ...
3/14 files checked 1% done
Checking testing/test-auth-routes-integration.cpp ...
4/14 files checked 5% done
Checking testing/test-auth-routes.cpp ...
5/14 files checked 11% done
Checking testing/test-auth.cpp ...
6/14 files checked 11% done
Checking testing/test-db-integration.cpp ...
7/14 files checked 18% done
Checking testing/test-gdp.cpp ...
8/14 files checked 24% done
Checking testing/test-get-post-games-routes-integration.cc ...
9/14 files checked 31% done
Checking testing/test-get-post-games-routes.cc ...
10/14 files checked 39% done
Checking testing/test-matchmaking-integration.cpp ...
11/14 files checked 57% done
Checking testing/test-matchmaking.cpp ...
12/14 files checked 71% done
Checking testing/test-player-endpoints-integration.cpp ...
13/14 files checked 83% done
Checking testing/test-player-endpoints.cpp ...
testing/test-player-endpoints.cpp:295:1: error: syntax error [syntaxError]
TEST_F(PlayerTestFixture, GetGamePlayersAuthTest) {
^
14/14 files checked 100% done
